packages/kit/test/apps/basics/src/routes/errors/endpoint-throws/fetch-throws.js
export const post = () => {
	throw new Error('Some userland error.');
};
